Prototype3/promoStyle.css
.parallax {
	height: 100vh;
	overflow-x: hidden;
	overflow-y: auto;
	-webkit-perspective: 1px;
	perspective: 1px;
}

.parallax__layer {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

.parallax__layer--base {
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
}

.parallax__layer--back {
	-webkit-transform: translateZ(-1px);
	transform: translateZ(-1px);
}

.parallax__layer {
	padding: 100vh 0;
}


/* Promo Style */

body{
	font-family: 'Open Sans', sans-serif;
	background-color: #BE0B00;
	margin:0;
	padding:0;
}

.object {
	position: absolute;
	left: 50%;
	top: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.slide{
	position: relative;
	background-color: white;
	width: 100%;
	height: 500px;
	margin-bottom: 300px;
	box-shadow: 0px 3px 10px #760B00;
	padding: 40px;
}

.slide img{
	display: inline;
	position: relative;
	right: 5%;
	float: right;
	top: -200px;
	height: 300px;
	/* visibility: hidden; */
}

p, a, h1{
	margin: 15px 35px;
	width: 50%;
	font-size: 1.2em;
	font-weight: 300;
}

h1{
	font-size: 1.8em;
	color: #760B00;
	margin-bottom: 5px;
}

a{
	text-decoration: none;
	color: #760B00;
}

.header{
	top: 100px;
	width: 1500px;
	left: 30%;
}

.indexLink{
	background-color: white;
	text-align: center;
	padding: 30px;
	box-shadow: 0px 3px 10px #760B00;
	/* margin: auto; */
	position: relative;
	left: -10%;
	top: 450px;
	display: inline-block;
	font-size: 2em;
	/* cursor: pointer; */
}

.indexLink:hover{
	box-shadow: 0px 10px 20px #760B00;
}

#headerText{
	position: relative;
	left: 30%;
	top: 0px;
	color: #760B00;
	font-size: 17.5em;
	font-weight: 600;
	display: inline;
}

#headerImage{
	height: 500px;
	position: relative;
	left: 25%;
	top: 140px;
	display: inline;
}

#sparklesImage{
	height: 1500px;
	top: 1300px;
}

.footer{
	height: 30px;
	margin-bottom: 0px;
}

.footer p{
	width: 95%;
	font-size: 1em;
}

.footer p a{
	margin: 0px;
	font-size: 1em;
	width: auto;
	font-weight: inherit;
}

.firstSlide{
	margin-top: 200px;
}

.lastSlide{
	margin-bottom: 250px;
}

.lastSlide p{
	float: right;
	margin-right: 200px;
}

.lastSlide h1{
	float: right;
	right: 5%;
	margin-right: 200px;
}

.lastSlide img{
	padding: 50px;
	margin-left: 200px;
	float: left;
	top: -20px;
	height: 300px;
}

